Fix alignment with the reference image

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-family: Merriweather, serif;
   line-height: 1.5;
-  margin: 1rem 0 .5rem;
+  margin: 1rem 0 1rem;
   padding: 0;
 }
 
@@ -104,7 +104,7 @@ main div:nth-child(6) {
 }
 
 figcaption {
-  margin: 1rem 1.5rem;
+  margin: 1rem 1.5rem 0;
   font-size: 1.5rem;
   font-weight: normal;
   font-style: italic;
